# Shellcord

./: .gitignore  Cargo.toml  README.md  message  start.sh.example
src/: main.rs
